Update/port to BC 1.47.